# maklai-python-intership-test-task

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
src/: controllers.py  factory.py
src/api/: controllers.py  schemas.py
src/core/: factory.py
src/services/: paraphrase.py
tests/: conftest.py  test_api.py
