[tool.poetry]
name = "Maklai Python Intership Test Task"
version = "1.0.0"
description = ""
authors = ["Kostiantyn Kadyrov <konstkadyr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
flask = "2.2.3"
nltk = "3.8.1"
marshmallow = "3.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
black = "23.3.0"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src/"
]
